tests/algorithms/x/Java/computer_vision/mosaic_augmentation.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden119_mosaic_augmentation3236191983/001/Main.java:160: error: incompatible types: double[] cannot be converted to Object[]
            System.out.println(_p(_geto(a, 0)) + " " + _p(_geto(a, 1)) + " " + _p(_geto(a, 2)) + " " + _p(_geto(a, 3)) + " " + _p(_geto(a, 4)));
                                        ^
/tmp/TestJavaTranspiler_Algorithms_Golden119_mosaic_augmentation3236191983/001/Main.java:160: error: incompatible types: double[] cannot be converted to Object[]
            System.out.println(_p(_geto(a, 0)) + " " + _p(_geto(a, 1)) + " " + _p(_geto(a, 2)) + " " + _p(_geto(a, 3)) + " " + _p(_geto(a, 4)));
                                                                ^
/tmp/TestJavaTranspiler_Algorithms_Golden119_mosaic_augmentation3236191983/001/Main.java:160: error: incompatible types: double[] cannot be converted to Object[]
            System.out.println(_p(_geto(a, 0)) + " " + _p(_geto(a, 1)) + " " + _p(_geto(a, 2)) + " " + _p(_geto(a, 3)) + " " + _p(_geto(a, 4)));
                                                                                        ^
/tmp/TestJavaTranspiler_Algorithms_Golden119_mosaic_augmentation3236191983/001/Main.java:160: error: incompatible types: double[] cannot be converted to Object[]
            System.out.println(_p(_geto(a, 0)) + " " + _p(_geto(a, 1)) + " " + _p(_geto(a, 2)) + " " + _p(_geto(a, 3)) + " " + _p(_geto(a, 4)));
                                                                                                                ^
/tmp/TestJavaTranspiler_Algorithms_Golden119_mosaic_augmentation3236191983/001/Main.java:160: error: incompatible types: double[] cannot be converted to Object[]
            System.out.println(_p(_geto(a, 0)) + " " + _p(_geto(a, 1)) + " " + _p(_geto(a, 2)) + " " + _p(_geto(a, 3)) + " " + _p(_geto(a, 4)));
                                                                                                                                        ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
5 errors
